--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^9.32.4",
     "@react-three/fiber": "^8.8.7",
     "@react-three/rapier": "^1.1.1",
+    "@react-three/xr": "^5.7.1",
     "cors": "^2.8.5",
     "gsap": "^3.12.5",
     "jotai": "^2.6.4",
