INtegrated AR server

--- a/Server/package.json
+++ b/Server/package.json
@@ -9,5 +9,9 @@
     "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@artcom/react-three-arjs": "^0.5.6",
+    "three": "^0.154.0"
+  }
 }
