--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@react-three/drei": "^9.32.4",
-    "@react-three/fiber": "^8.8.7",
+    "@react-three/fiber": "^8.13.4",
     "@react-three/rapier": "^1.1.1",
+    "@ar-js-org/ar.js": "3.4.5",
+    "@artcom/react-three-arjs": "0.5.6",
     "@react-three/xr": "^5.7.1",
     "cors": "^2.8.5",
     "gsap": "^3.12.5",
@@ -26,7 +28,7 @@
     "react-scripts": "^5.0.1",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
-    "three": "^0.145.0"
+    "three": "^0.154.0"
   },
   "browserslist": {
     "production": [
