--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ar-js-org/ar.js": "3.4.5",
+    "@artcom/react-three-arjs": "0.5.6",
     "@react-three/drei": "^9.32.4",
     "@react-three/fiber": "^8.13.4",
     "@react-three/rapier": "^1.1.1",
-    "@ar-js-org/ar.js": "3.4.5",
-    "@artcom/react-three-arjs": "0.5.6",
     "@react-three/xr": "^5.7.1",
     "cors": "^2.8.5",
     "gsap": "^3.12.5",
@@ -41,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.1"
   }
 }
