setted animations on Movement

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "gsap": "^3.12.5",
     "jotai": "^2.6.4",
+    "leva": "^0.9.35",
     "nodemon": "^3.0.3",
     "r3f-perf": "^6.5.0",
     "react": "^18.2.0",
