--- a/Socket-Server/package.json
+++ b/Socket-Server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@artcom/react-three-arjs": "^0.5.6",
+    "leva": "^0.9.35",
     "three": "^0.154.0"
   }
 }
