--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "r3f-perf": "^6.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.15.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "^5.0.1",
     "socket.io": "^4.7.4",
