--- a/Socket-Server/package.json
+++ b/Socket-Server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@artcom/react-three-arjs": "^0.5.6",
     "leva": "^0.9.35",
+    "peerjs": "^1.5.2",
     "three": "^0.154.0"
   }
 }
