--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "jotai": "^2.6.4",
     "leva": "^0.9.35",
     "nodemon": "^3.0.3",
+    "peer": "^1.0.2",
+    "peerjs": "^1.5.2",
     "r3f-perf": "^6.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
