--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,11 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@langchain/google-genai": "^0.0.10",
+    "@langchain/openai": "^0.0.25",
     "@types/mongoose": "^5.11.97",
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase": "^10.10.0",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.1.30",
     "mongoose": "^8.1.0",
+    "pdfjs-dist": "^4.0.379",
     "zod": "^3.22.4"
   }
 }
