--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,11 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^10.10.0",
+    "google-cloud-text-to-speech": "^0.3.2",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.1.30",
     "mongoose": "^8.1.0",
+    "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^4.0.379",
     "zod": "^3.22.4"
   }
