--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ar-js-org/ar.js": "3.4.5",
     "@artcom/react-three-arjs": "0.5.6",
+    "@langchain/openai": "^0.0.25",
     "@react-three/drei": "^9.32.4",
     "@react-three/fiber": "^8.13.4",
     "@react-three/rapier": "^1.1.1",
